# xwift

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
cmake/: XWiftOptions.cmake
docs/: CrossPlatform.md  ErrorHandling.md  FFI.md  GUI_Framework.md  PluginSystem.md  UI_DSL.md  XWiftStdLib.md
extensions/xwift-lang/: README.md  language-configuration.json  xwift-lang-1.0.0.vsix
extensions/xwift-lang/images/: xwift-icon-theme.json
extensions/xwift-lang/snippets/: xwift.code-snippets
extensions/xwift-lang/syntaxes/: xwift.tmLanguage.json
include/xwift/: xwift.h
include/xwift/AST/: Decl.h  Module.h  Nodes.h  Type.h
include/xwift/Basic/: Diagnostic.h  LLVM.h  Result.h  Version.h
include/xwift/CodeGen/: CodeGen.h
include/xwift/FFI/: FFI.h
include/xwift/FFI/ObjC/: ObjCFFI.h
include/xwift/FFI/Python/: PythonFFI.h
include/xwift/Frontend/: Frontend.h
include/xwift/Interpreter/: Interpreter.h
include/xwift/Lexer/: Token.h
include/xwift/Parser/: SyntaxParser.h
include/xwift/Plugin/: Plugin.h
include/xwift/Sema/: Sema.h
include/xwift/UI/: UI.h
include/xwift/stdlib/Collections/: Index.h  Set.h
include/xwift/stdlib/Concurrency/: Async.h
include/xwift/stdlib/Error/: Error.h
include/xwift/stdlib/HTTP/: BodyEncoder.h  HTTP.h  HTTPBackend.h  HTTPPlugin.h  URLParser.h
include/xwift/stdlib/JSON/: JSON.h  JSONClient.h  JSONPlugin.h
include/xwift/stdlib/Protocols/: Comparable.h  Iterable.h
include/xwift/stdlib/Terminal/: Terminal.h
lib/AST/: CMakeLists.txt  Decl.cpp  Module.cpp  Type.cpp
lib/Basic/: CMakeLists.txt  LLVM.cpp  Version.cpp
lib/CodeGen/: CodeGen.cpp
lib/FFI/: CMakeLists.txt  FFI.cpp
lib/FFI/ObjC/: ObjCFFI.cpp
lib/FFI/Python/: PythonFFI.cpp
lib/Filesystem/: CMakeLists.txt
lib/Frontend/: CMakeLists.txt  Frontend.cpp
lib/Interpreter/: CMakeLists.txt
lib/Lexer/: CMakeLists.txt  Lexer.cpp
lib/Logging/: Logger.cpp
lib/Parser/: CMakeLists.txt  Parser.cpp  SyntaxParser.cpp
lib/Plugin/: CMakeLists.txt
lib/Sema/: Sema.cpp
lib/UI/: CMakeLists.txt  UI.cpp
lib/stdlib/: CMakeLists.txt  json_core.xw
lib/stdlib/Collections/: Array.cpp  Dictionary.cpp  Set.cpp
lib/stdlib/Concurrency/: Async.cpp
lib/stdlib/Config/: config.xw
lib/stdlib/Filesystem/: Path.cpp  path_utils.xw
lib/stdlib/HTTP/: BodyEncoder.cpp  CurlBackend.cpp  HTTP.cpp  HTTPClient.cpp  HTTPPlugin.cpp  Win32Backend.cpp
lib/stdlib/JSON/: JSON.cpp  JSONClient.cpp  JSONPlugin.cpp
lib/stdlib/Logging/: formatters.xw
lib/stdlib/UI/: ui_dsl.xw
lib/stdlib/Utils/: utils.xw
release-package/: RELEASE_NOTES.md
release-package/extensions/extensions/xwift-lang/: LICENSE  extension.js  package-lock.json  package.json
release-package/src/: CMakeLists.txt
release-package/src/include/xwift/AST/: Optimizer.h
release-package/src/include/xwift/Basic/: Diagnostic.h  Error.h
release-package/src/include/xwift/Filesystem/: Filesystem.h
release-package/src/include/xwift/Interpreter/: Interpreter.h
release-package/src/include/xwift/Lexer/: Lexer.h  Token.h
release-package/src/include/xwift/Logging/: Logger.h
release-package/src/include/xwift/Parser/: Parser.h
release-package/src/include/xwift/Sema/: Sema.h
release-package/src/include/xwift/Testing/: TestFramework.h
release-package/src/include/xwift/stdlib/Collections/: Array.h  Dictionary.h
release-package/src/include/xwift/stdlib/Filesystem/: Path.h
release-package/src/include/xwift/stdlib/HTTP/: HTTPBackend.h  HTTPClient.h
release-package/src/include/xwift/stdlib/JSON/: JSONPlugin.h
release-package/src/lib/AST/: CMakeLists.txt  Optimizer.cpp
release-package/src/lib/CodeGen/: CMakeLists.txt
release-package/src/lib/Filesystem/: Filesystem.cpp
release-package/src/lib/Interpreter/: Interpreter.cpp
release-package/src/lib/Logging/: CMakeLists.txt
release-package/src/lib/Plugin/: Plugin.cpp
release-package/src/lib/Sema/: CMakeLists.txt
release-package/src/lib/stdlib/: http.xw
release-package/src/lib/stdlib/Error/: Error.cpp
release-package/src/lib/stdlib/HTTP/: CMakeLists.txt  CurlBackend.cpp  HTTP.h  URLParser.cpp
release-package/src/lib/stdlib/JSON/: JSON.cpp  JSON.h
release-package/src/lib/stdlib/Terminal/: Terminal.cpp
release-package/src/tools/xwift/: xwift.cpp
test/: CMakeLists.txt  README.md  SYNTAX_VERIFICATION.md  game.xw  hello.xw  production_test.xw  snake.xw  snake_game.xw  snake_game_fixed.xw  snake_game_simple.xw  snake_simple.xw  test_class.xw  test_framework.cpp  test_http.xw  test_multilang.xw  test_objc_ffi.xw  test_optional.xw  test_python_ffi.xw  test_stdlib.bat  test_stdlib.sh  test_stdlib_modules.xw  test_terminal.xw  ui_examples.xw
tools/xwift/: CMakeLists.txt  xwift.cpp
unittests/: CMakeLists.txt
